--- a/index.html
+++ b/index.html
@@ -813,7 +813,7 @@
                 For example: john.doe@gmail.com or yourname@outlook.com
                 On first submission, FormSubmit will send you a confirmation email
             -->
-                <form action="https://formsubmit.co/YOUR-EMAIL@gmail.com" method="POST">
+                <form action="https://formsubmit.co/abdullaalasiri95@gmail.com" method="POST">
 
 
                     <!-- FormSubmit Configuration (Hidden Fields) -->
@@ -896,3 +896,4 @@
 
 
 </html>
+
